--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mantine/carousel": "^7.6.1",
+    "@mantine/core": "^7.6.1",
+    "@mantine/form": "^7.6.1",
+    "@mantine/hooks": "^7.6.1",
+    "@mantine/modals": "^7.6.1",
     "@mui/icons-material": "^5.15.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -14,6 +19,7 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "classnames": "^2.5.1",
+    "embla-carousel-react": "^8.0.0",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -48,6 +54,9 @@
     ]
   },
   "devDependencies": {
+    "postcss": "^8.4.35",
+    "postcss-preset-mantine": "^1.13.0",
+    "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.2.4",
     "tailwindcss": "^3.4.1"
   }
