--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@types/node": "^16.18.72",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@types/react-helmet": "^6.1.11",
     "classnames": "^2.5.1",
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "sass": "^1.70.0",
